--- a/index.html
+++ b/index.html
@@ -24,40 +24,23 @@
     width: 100%;
   }
 
-  h1 {
-    font-size: 24px;
-  }
-
-  ul {
-    padding-top: 0;
-    margin-top: 0;
-    padding-bottom: 0;
-    margin-bottom: 0;
-  }
-
   #map {
-    width: 80%;
-    height: -mox-calc(100% - 36px - 50px - 50px); /*last value is for padding*/
+/*    width: 80%;
+    height: -mox-calc(100% - 36px - 50px - 50px);
     height: -webkit-calc(100% - 36px - 50px - 50px);
-    height: calc(100% - 36px - 50px - 50px);
-  }
-
-  #links {
-    overflow: auto;
-    height: 50px;
+    height: calc(100% - 36px - 50px - 50px);*/
     width: 100%;
+    height: 100%;
   }
   </style>
 </head>
 <body>
 <div id="map"></div>
-<div id="links">
-</div>
 
 <script type="text/javascript">
 
   function onCount(feature, layer) {
-    var percentFemale = "Unknown"
+    var percentFemale = "Unknown";
     if (feature.properties.malepercent != "NA") {
       percentFemale = Math.round(feature.properties.malepercent * 100) + "%";
     };
@@ -65,33 +48,54 @@
     layer.bindPopup(feature.properties.location + "<br>Riders: " + feature.properties.total + "<br>Female: " + percentFemale);
   };
 
-  var spring2009am = L.geoJson(spring2009am, {onEachFeature: onCount});
-  var spring2010am = L.geoJson(spring2010am, {onEachFeature: onCount});
-  var spring2011am = L.geoJson(spring2011am, {onEachFeature: onCount});
-  var spring2012am = L.geoJson(spring2012am, {onEachFeature: onCount});
-  var spring2013am = L.geoJson(spring2013am, {onEachFeature: onCount});
-  var spring2009pm = L.geoJson(spring2009pm, {onEachFeature: onCount});
-  var spring2010pm = L.geoJson(spring2010pm, {onEachFeature: onCount});
-  var spring2011pm = L.geoJson(spring2011pm, {onEachFeature: onCount});
-  var spring2012pm = L.geoJson(spring2012pm, {onEachFeature: onCount});
-  var spring2013pm = L.geoJson(spring2013pm, {onEachFeature: onCount});
+  function layerStyle(feature, latlng) {
+    // function heatColor(feature) {
+    //   if (feature.properties.total > 30) {
+    //     return "#f00"
+    //   } else {
+    //     return "#000"
+    //   };
+    // };
 
-  var fall2009am = L.geoJson(fall2009am, {onEachFeature: onCount});
-  var fall2010am = L.geoJson(fall2010am, {onEachFeature: onCount});
-  var fall2011am = L.geoJson(fall2011am, {onEachFeature: onCount});
-  var fall2012am = L.geoJson(fall2012am, {onEachFeature: onCount});
-  var fall2013am = L.geoJson(fall2013am, {onEachFeature: onCount});
-  var fall2009pm = L.geoJson(fall2009pm, {onEachFeature: onCount});
-  var fall2010pm = L.geoJson(fall2010pm, {onEachFeature: onCount});
-  var fall2011pm = L.geoJson(fall2011pm, {onEachFeature: onCount});
-  var fall2012pm = L.geoJson(fall2012pm, {onEachFeature: onCount});
-  var fall2013pm = L.geoJson(fall2013pm, {onEachFeature: onCount});
+    return new L.CircleMarker(latlng, {
+      opacity: 1,
+      color: "#fff",
+      stroke: true,
+      weight: 2,
+      // fillColor: heatColor(feature),
+      fillColor: "#27ae60",
+      fillOpacity: 0.85,
+      radius: feature.properties.total / 4
+    });
+  };
+
+  var spring2009am = L.geoJson(spring2009am, {pointToLayer: layerStyle, onEachFeature: onCount});
+  var spring2010am = L.geoJson(spring2010am, {pointToLayer: layerStyle, onEachFeature: onCount});
+  var spring2011am = L.geoJson(spring2011am, {pointToLayer: layerStyle, onEachFeature: onCount});
+  var spring2012am = L.geoJson(spring2012am, {pointToLayer: layerStyle, onEachFeature: onCount});
+  var spring2013am = L.geoJson(spring2013am, {pointToLayer: layerStyle, onEachFeature: onCount});
+  var spring2009pm = L.geoJson(spring2009pm, {pointToLayer: layerStyle, onEachFeature: onCount});
+  var spring2010pm = L.geoJson(spring2010pm, {pointToLayer: layerStyle, onEachFeature: onCount});
+  var spring2011pm = L.geoJson(spring2011pm, {pointToLayer: layerStyle, onEachFeature: onCount});
+  var spring2012pm = L.geoJson(spring2012pm, {pointToLayer: layerStyle, onEachFeature: onCount});
+  var spring2013pm = L.geoJson(spring2013pm, {pointToLayer: layerStyle, onEachFeature: onCount});
+
+  var fall2009am = L.geoJson(fall2009am, {pointToLayer: layerStyle, onEachFeature: onCount});
+  var fall2010am = L.geoJson(fall2010am, {pointToLayer: layerStyle, onEachFeature: onCount});
+  var fall2011am = L.geoJson(fall2011am, {pointToLayer: layerStyle, onEachFeature: onCount});
+  var fall2012am = L.geoJson(fall2012am, {pointToLayer: layerStyle, onEachFeature: onCount});
+  var fall2013am = L.geoJson(fall2013am, {pointToLayer: layerStyle, onEachFeature: onCount});
+  var fall2009pm = L.geoJson(fall2009pm, {pointToLayer: layerStyle, onEachFeature: onCount});
+  var fall2010pm = L.geoJson(fall2010pm, {pointToLayer: layerStyle, onEachFeature: onCount});
+  var fall2011pm = L.geoJson(fall2011pm, {pointToLayer: layerStyle, onEachFeature: onCount});
+  var fall2012pm = L.geoJson(fall2012pm, {pointToLayer: layerStyle, onEachFeature: onCount});
+  var fall2013pm = L.geoJson(fall2013pm, {pointToLayer: layerStyle, onEachFeature: onCount});
 
 
   var map = L.map('map', {
-    center: new L.LatLng(33.78, -84.38), 
+    center: new L.LatLng(33.78, -84.35), 
     zoom: 12,
-    layers: [spring2013am]
+    layers: [fall2012pm]
   });
 
   var maps = {
@@ -121,7 +125,6 @@
     collapsed: false
   }).addTo(map);
 
-  // or tiles #7:
   L.tileLayer('http://{s}.tiles.mapbox.com/v3/mollie.hp984op1/{z}/{x}/{y}.png', {
     attribution: '<a href="http://proximityviz.com/">Proximity Viz</a> | Base map <a href="https://www.mapbox.com/about/maps/">© Mapbox © OpenStreetMap</a> | Bike count data from <a href="http://www.atlantabike.org/BicycleTrafficCounts" target="_blank">Atlanta Bicycle Coalition</a>',
     maxZoom: 18
