--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Atlanta Bicycle Coalition Bike Counts</title>
   <link rel="icon" 
     type="image/png" 
-    href="http://mollietaylor.com/favicon.png">
+    href="http://proximityviz.com/favicon.png">
   <style type="text/css">
   
   html {
@@ -49,16 +49,7 @@
 }
 
   </style>
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-37767407-2', 'mollietaylor.com');
-      ga('send', 'pageview');
-
-    </script>
+    <script type="text/javascript" src="http://proximityviz.com/files/analytics.js"></script>
 </head>
 <body>
 
