--- a/manual/map.html
+++ b/manual/map.html
@@ -6,14 +6,14 @@
   <title>Atlanta Bicycle Coalition Bike Counts</title>
   <link rel="icon" 
     type="image/png" 
-    href="http://mollietaylor.com/favicon.png">
+    href="http://proximityviz.com/favicon.png">
   <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
   <!--[if lte IE 8]>
       <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.ie.css" />
   <![endif]-->
   <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
   <script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
-  <script type="text/javascript" src="http://mollietaylor.com/files/leaflet.ajax.js"></script>
+  <script type="text/javascript" src="http://proximityviz.com/files/leaflet.ajax.js"></script>
   <script type="text/javascript" src="counts.js"></script>
   <style type="text/css">
   
@@ -38,16 +38,8 @@
     height: 100%;
   }
   </style>
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-37767407-2', 'mollietaylor.com');
-      ga('send', 'pageview');
-
-    </script>
+  
+    <script type="text/javascript" src="http://proximityviz.com/files/analytics.js"></script>
 </head>
 <body>
 <div id="map"></div>
