--- a/pneumatic/time-of-day-multi.html
+++ b/pneumatic/time-of-day-multi.html
@@ -3,35 +3,26 @@
   <head profile="http://www.w3.org/2005/10/profile">
     <link rel="icon" 
       type="image/png" 
-      href="http://mollietaylor.com/favicon.png">
+      href="http://proximityviz.com/favicon.png">
     <title>ABC Pneumatic Tube Data</title>
 
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-2.1.0.min.js"></script>
 
     <!-- Underscore -->
-    <script src="http://mollietaylor.com/files/underscore-min.js"></script>
+    <script src="http://proximityviz.com/files/underscore-min.js"></script>
 
     <!-- D3 -->
     <script src="http://d3js.org/d3.v3.min.js"></script>
 
     <!-- C3 -->
-    <link href="http://mollietaylor.com/files/c3.css" rel="stylesheet" type="text/css">
-    <script src="http://mollietaylor.com/files/c3.min.js"></script>
+    <link href="http://proximityviz.com/files/c3.css" rel="stylesheet" type="text/css">
+    <script src="http://proximityviz.com/files/c3.min.js"></script>
 
     <link rel="stylesheet" type="text/css" href="multi.css">
 
 
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-37767407-2', 'mollietaylor.com');
-      ga('send', 'pageview');
-
-    </script>
+    <script type="text/javascript" src="http://proximityviz.com/files/analytics.js"></script>
   </head>
   <body>
 
@@ -51,7 +42,7 @@
   Weekend Other
     <div id="weekend-other-chart"></div>
   </div>
-  <script type="text/javascript" src="http://mollietaylor.com/files/tabletop.js"></script>
+  <script type="text/javascript" src="http://proximityviz.com/files/tabletop.js"></script>
   <script type="text/javascript" src="time-of-day-multi.js"></script>
   </body>
 </html>
